--- a/derek-signature04.html
+++ b/derek-signature04.html
@@ -7,14 +7,13 @@
   <body>
     <div style="width: 100%;">
 
-      <p style="padding-bottom:1px;white-space: nowrap;color: #444; font-family:sans-serif; font-size: 1em; line-height: 1.3; vertical-align: top; margin-left: 7px; margin-top:0; margin-bottom: 0;"><span style="font-weight:bold;">Derek Goulet</span><br>Digital Media Producer, Editor</p>
-         <p style="margin-top:0; margin-bottom: 0; white-space: nowrap;color: #444; font-family:sans-serif; font-size: 1em; line-height: 1.3; vertical-align: top; margin-left: 7px;">Digital Learning & Design<br>
+      <p style="padding-bottom:1px;white-space: nowrap;color: #444; font-family:sans-serif; font-size: 1.1em; line-height: 1.3; vertical-align: top; margin-left: 7px; margin-top:0; margin-bottom: 0;"><span style="font-weight:bold;">Derek Goulet</span><br>Digital Media Producer, Editor</p>
+         <p style="margin-top:0; margin-bottom: 0; white-space: nowrap;color: #444; font-family:sans-serif; font-size: 1.1em; line-height: 1.3; vertical-align: top; margin-left: 7px;">Digital Learning & Design<br>
          Sciences Library &vert; 6<sup style="vertical-align: baseline; position: relative; top: -0.4em;">th</sup> Floor<br>
          Brown University<br>
-         401.863.5922<br>
-         Pronouns: He/him/his
+         401.863.5922
          </p>
-         <img style="margin-top: 0;width:100%; max-width:200px;display:inline-block;" src="https://i.imgur.com/7Z9V8wW.png" alt="The Brown Digital Learning & Design logo">
+         <img style="border-top: 1px solid black;margin-top: 10px; padding-top:10px;width:100%; max-width:200px;display:inline-block;" src="https://i.imgur.com/VBgpPAF.png" alt="The Brown Digital Learning & Design logo">
     </div>
 
   </body>
